--- a/package.json
+++ b/package.json
@@ -76,19 +76,20 @@
         "@types/node": "^14.14.6",
         "@types/vscode": "^1.50.0",
         "@vscode/test-electron": "^2.3.0",
-        "@vscode/vsce": "^2.19.0",
+        "@vscode/vsce": "^2.31.1",
         "glob": "^10.4.5",
         "typescript": "^4.0.3"
     },
     "dependencies": {
-        "azdata": "latest",
+        "azdata": "^1.0.0",
         "minimatch": "^10.0.1",
         "minimist": "^1.2.8",
-        "mkdirp": "^3.0.0",
+        "mkdirp": "^3.0.1",
         "uuid": "^9.0.0"
     },
     "resolutions": {
-        "glob": "^10.2.7",
+        "minimist": "^1.2.8",
+        "glob": "^10.4.5",
         "mkdirp": "^3.0.0",
         "uuid": "^9.0.0"
     }
